0.69
- Add interface returning drive capabilityes (cdio_get_drive_cap).

0.68
- More honest about mode1 reading in backends. Remove some of the bogusness.
- Fixes and simplifications to Solaris (from Ian MacIntosh): no longer
  requires root access on Sunray environmentsa
- Win32 ioctl works now on win2k and XP (and probably NT and ME) 
- compiles on cygwin with -mno-cygwin (needed for videolan's vlc)
- option --with-versioned-libs now checks for GNU ld.

0.67
-  portability for ARM
- add iso-read program and regression tests
- libiso9960: stat routines that match level 1 ISO-9600 filenames
  translating them into Unix-style names (i.e. lowercase letters, 
  with version numbers dropped.)
- expand/improve documentation.
- more graceful exits when there is no CD or can't read it.
- add --without-versioned-libs 
- add README.libcdio and note possible problems on different OSs
  without GNU make

0.66
-  Add interface for reading an ISO-9660 image
-  portability fixes (Solaris, cygwin)
-  Microsoft Windows ASPI/ DeviceIoControl code reorganization
-  NRG image reading improvements 
-  Remove memory leaks
-  library symbol versioning (from Nicolas Boullis)
-  Go over documentation

0.65
-  tag headers to give doxygen API documentation
-  cd-info/cd-read now can specify library level of output
-  sample program using libiso9660 added.

0.64
-  add routines to return a list of devices or scan a list of devices
   which satisfy any/all things in a capability mask. Should be useful
   for plugins that want to find a CD-DA to play or find a plugin that handles
   a particular device. 
-  cd-read: new program to help diagnose reading problems.
-  cd-info: now displays date on iso9660 listing and translates filename 
   to normal conventions, gives track "green" info
-  Add/expose routines to get/set time. time is reported back in entry
   stat. Routines to create ISO-9660 directories and entries must now
   supply the time to set on the entry.