@@ -1,0 +1,13 @@
+// $Id
+// MODE1 track followed by an AUDIO track
+
+CD_ROM
+
+TRACK MODE1
+FILE "isofs-m1.bin" 00:00:00 
+ZERO 1:0:0
+
+TRACK AUDIO
+PREGAP 0:2:0
+FILE "cdda.bin" 00:00:00 
+
