@@ -1,0 +1,13 @@
+// $Id: data5.toc,v 1.1 2004/05/08 20:36:02 rocky Exp $
+// XA disk 
+// 
+
+CD_ROM_XA
+
+TRACK MODE2_FORM2
+FILE "vcd_demo.bin" 00:00:00 00:13:57
+
+TRACK MODE2_FORM1
+PREGAP 0:2:0
+FILE "vcd_demo.bin" 00:20:71 00:00:00
+
