@@ -1,0 +1,8 @@
+// $Id: data6.toc,v 1.1 2004/05/08 20:36:02 rocky Exp $
+// MODE2 track
+// 
+
+CD_ROM
+
+TRACK MODE2
+FILE "vcd_demo.bin" 00:00:00 00:13:57
