@@ -1,5 +1,8 @@
 0.69
 - Add interface returning drive capabilityes (cdio_get_drive_cap).
+- Minimal cdrdao image reading
+- Some important (I think) bug fixes
+
 
 0.68
 - More honest about mode1 reading in backends. Remove some of the bogusness.
@@ -108,4 +111,4 @@
 0.1
   Routines split off from VCDImager.
 
-$Id: NEWS,v 1.38 2004/04/23 22:10:52 rocky Exp $
+$Id: NEWS,v 1.39 2004/05/08 20:36:01 rocky Exp $
